# clipso-ai

./: README.md  clipso.docx  deploy.sh  docker-compose.yml  main.py  package-lock.json  package.json  pitched_product_brief.md  product_brief.md  pyproject.toml  run_clipso.sh  update_processing.sh
backend/: .env.example  .gitignore  Notes.md  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: db.py  main.py  models.py
backend/app/api/: __init__.py  endpoints.py
backend/app/core/: __init__.py  config.py
backend/app/services/: aws_ai_services.py  caption.py  caption_generator.py  enhanced_captions.py  enhanced_transcriber.py  r2.py  segment_parser.py  storage.py  text_drawer.py
backend/scripts/: upload_fallback_broll.py
backend/static/: index.html
backend/static/assets/: index-1p4Yje-n.js  index-B022GJ8l.css  index-CbVg8kCO.js  index-DU_BPZee.js  index-DgZmUUkp.css  index-nDEccKrO.js
backend/tests/: test_api.py  test_r2.py
frontend/: README.md  index.html  tailwind.config.ts  vite.config.js  vite.config.ts
frontend/src/: App.tsx  env-polyfill.js  index.css
frontend/src/components/layout/: AppContainer.tsx.bak  Navbar.tsx.bak
frontend/src/components/ui/: page-heading.tsx  toast.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CreateVideo.tsx  Index.tsx  NotFound.tsx  Preview.tsx  Processing.new.tsx  Processing.tsx  Processing.tsx.bak  ProcessingUpdated.tsx  Record.tsx  Upload.tsx
